--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		div {
 			width: 200px;
 			height: 200px;
-			background-color: red;
+			/* background-color: red; */
+			background-color: blue;
 		}
 	</style>
 </head>
