--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 			width: 200px;
 			height: 200px;
 			/* background-color: red; */
-			background-color: blue;
+			/* background-color: blue; */
+			background-color: yellow;
 		}
 	</style>
 </head>
